package org.example;

public class BudinDiabolico extends Postre {

}
