package org.example;

public class PiononoGangrenoso extends Postre {
}
