package org.example;

public interface PostreBuilder {
    public void reset();
    public void agregarIngrediente1();
    public void agregarIngrediente2();
    public void agregarIngrediente3();

}
