package org.example;

public class TortaDeLaMuerte extends Postre {
}
